z-index fixed
Naprawiłem błąd związany z z-index w sekcjach oraz headerze

--- a/src/style.css
+++ b/src/style.css
@@ -39,7 +39,7 @@
 
 /* Style dla przycisku "burger menu" */
 .section {
-  z-index: -1;
+  z-index: 1;
 }
 
 #header.container {
